allele size bug 	modified:   src/MyFLq.py there was a strange bug, where alleles that were smaller than the reference allele and had an offset (such as 8.2), were one repeat size too big e.g. real allele size 8.2, ref a size 10 => became 9.2, instead 11.2 would have remained 11.2 This is fixed now 	modified:   src/MyFLsite/static/css/MyFLsite.css header for django app set to 120px (there was some overflow in the login box)

--- a/src/MyFLsite/static/css/MyFLsite.css
+++ b/src/MyFLsite/static/css/MyFLsite.css
@@ -28,7 +28,7 @@ body {
  
 #header {
     position: relative;
-    height: 100px;
+    height: 120px;
     margin-top: 20px;
     padding: 0;
     display: block;
@@ -46,7 +46,7 @@ body {
     left: 0;
     top: 0;
     width: calc(100% - 180px);/*-165px for bg image padding*/
-    height: 100px;
+    height: 120px;
     background-color: #fcf8f9;/*Previous colors: #f3f9fd;*/
     box-shadow: 10px 10px 5px #888888;
     background-image: url('../images/MyFLqLogo_s.png');
@@ -62,7 +62,7 @@ body {
     right: 0;
     top: 0;
     width: 150px;/*width: 18%;*/
-    height: 100px;
+    height: 120px;
     background-color: #fcf8f9;
     box-shadow: 10px 10px 5px #888888;
     padding-left: 10px;
